Fix alignment of ordered list position

--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -35,7 +35,7 @@
     flex-direction: column;
     max-height: 300px;
     border: solid;
-    padding: 8vh;
+    padding: 9vh;
     border-color: rgb(255, 255, 255) ;
 }
 
